css not showing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divi Selqni | Galaxy Space</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1257634875956007004/1473350797197840655/image.png?ex=6995e45b&is=699492db&hm=8d3cab2f878df8f83929d4123e90a3969eca84a9885539f2b95eb5a4c056182c&">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
      
 <footer class="site-patent">
     © 2026 Divi Selqni Community | Всички права запазени
