--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <header>
         <div class="nav-container">
-            <div class="nav-link" onclick="openModal('shop')">🛒 КУПИ</div>
-            <div class="nav-link" onclick="openModal('rules')">📜 ПРАВИЛА</div>
-            <div class="nav-link" onclick="openModal('links')">🔗 ВРЪЗКИ</div>
+            <div class="nav-link" onclick="window.location.href='shop.html'">🛒 SHOP</div>
+            <div class="nav-link" onclick="window.location.href='rules.html'">📜 RULES</div>
+            <div class="nav-link" onclick="window.location.href='links.html'">🔗 LINKS</div>
             <div class="nav-link" id="auth-button" onclick="handleAuthClick()">REGISTER</div>
         </div>
     </header>
