--- a/profile.html
+++ b/profile.html
@@ -19,15 +19,16 @@
     <header>
         <div class="nav-container">
             <div class="nav-link" onclick="window.location.href='index.html'">🏠 HOME</div>
-            <div class="nav-link" onclick="window.location.href='profile.html'">👤 PROFILE</div>
-            <div class="nav-link" onclick="openModal('shop')">🛒 SHOP</div>
-            <div class="nav-link" id="logoutNav">🚪 LOGOUT</div>
+            <div class="nav-link" onclick="window.location.href='shop.html'">🛒 SHOP</div>
+            <div class="nav-link" onclick="window.location.href='rules.html'">📜 RULES</div>
+            <div class="nav-link" onclick="window.location.href='links.html'">🔗 LINKS</div>
+            <div class="nav-link" id="user-info"></div>
         </div>
     </header>
 
     <div class="center-page">
         <div id="profile-container">
-            <!-- Profile cards will be inserted here by JS -->
+            <!-- Profile content will be inserted here by JS -->
         </div>
     </div>
 
