--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
         <input id="password" type="password" placeholder="Password">
         <input id="username" placeholder="Username">
 
-        <button onclick="register()">Register</button>
+        <button onclick="register()">Account</button>
 
         <p onclick="window.location.href='login.html'" class="link">Already have account? Login</p>
         <p onclick="window.location.href='index.html'" class="link">⬅ Back to Home</p>
