--- a/rules.html
+++ b/rules.html
@@ -29,10 +29,13 @@
     <div class="center-page">
         <div class="content-card">
             <h1>📜 ПРАВИЛА</h1>
-            <p>1. Бъди уважителен към всички членове.</p>
-            <p>2. Не спамвай в чатовете.</p>
-            <p>3. Използвай подходящ език.</p>
-            <p>4. Следвай указанията на модераторите.</p>
+            <p>1. Уважавай всички членове на сървъра. Обиди, заплахи, тормоз, расизъм и всякакъв вид дискриминация не се толерират.</p>
+            <p>2. Спамът не е позволен. Това включва повтарящи се съобщения, прекомерно използване на емоджита и реклами без разрешение.</p>
+            <p>3. Публикувай само подходящо съдържание. NSFW, незаконно или шокиращо съдържание е забранено.</p>
+            <p>4. Следвай инструкциите на администраторите и модераторите. Те имат право да предприемат действия за поддържане на реда.</p>
+            <p>5. Използвай правилните канали според темата.</p>
+            <p>6. Не злоупотребявай със системата, не използвай експлойти и не се представяй за друг човек.</p>
+            <p>7. Поддържай приятелска атмосфера и се забавлявай, без да пречиш на останалите.</p>
         </div>
     </div>
 
