--- a/shop.html
+++ b/shop.html
@@ -31,19 +31,19 @@
             <h1>🛒 МАГАЗИН</h1>
             <div id="products">
                 <div class="product-card">
-                    <h3>VIP Status</h3>
+                    <h3>💎 VIP Status</h3>
                     <p>Специален статус в Discord</p>
                     <p class="price">10 лв</p>
                     <button onclick="addToCart('VIP Status', 10)">Добави в количка</button>
                 </div>
                 <div class="product-card">
-                    <h3>T-shirt</h3>
+                    <h3>👕 T-shirt</h3>
                     <p>custom тениска на Диви Селяни/ДС</p>
                     <p class="price">5 лв</p>
                     <button onclick="addToCart('T-shirt', 5)">Добави в количка</button>
                 </div>
                 <div class="product-card">
-                    <h3>Discord Nitro</h3>
+                    <h3>🚀 Discord Nitro</h3>
                     <p>Discord Nitro 3 months code </p>
                     <p class="price">15 лв</p>
                     <button onclick="addToCart('Discord Nitro', 15)">Добави в количка</button>
