--- a/shop.html
+++ b/shop.html
@@ -33,24 +33,27 @@
                 <div class="product-card">
                     <h3>💎 VIP Status</h3>
                     <p>Специален статус в Discord</p>
-                    <p class="price">10 лв</p>
-                    <button onclick="addToCart('VIP Status', 10)">Добави в количка</button>
+                    <p class="price">3 euro</p>
+                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     Buy
+                     </a>
                 </div>
                 <div class="product-card">
                     <h3>👕 T-shirt</h3>
                     <p>custom тениска на Диви Селяни/ДС</p>
-                    <p class="price">5 лв</p>
-                    <button onclick="addToCart('T-shirt', 5)">Добави в количка</button>
+                    <p class="price">16 euro</p>
+                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     Buy
+                     </a>
                 </div>
                 <div class="product-card">
                     <h3>🚀 Discord Nitro</h3>
                     <p>Discord Nitro 3 months code </p>
-                    <p class="price">15 лв</p>
-                    <button onclick="addToCart('Discord Nitro', 15)">Добави в количка</button>
+                    <p class="price">3.99 euro/</p>
+                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     Buy
+                     </a>
                 </div>
-            </div>
-            <button onclick="viewCart()">Виж количка</button>
-        </div>
     </div>
 
     <div id="modal-overlay" class="overlay">
