--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
                     <h3>💎 VIP Status</h3>
                     <p>Специален статус в Discord</p>
                     <p class="price">3 euro</p>
-                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     <a href="https://youtu.be/dQw4w9WgXcQ?si=AD73Xztl3A_iRYru" target="_blank" class="buy-btn">
                      Buy
                      </a>
                 </div>
@@ -42,7 +42,7 @@
                     <h3>👕 T-shirt</h3>
                     <p>custom тениска на Диви Селяни/ДС</p>
                     <p class="price">16 euro</p>
-                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     <a href="https://youtu.be/dQw4w9WgXcQ?si=AD73Xztl3A_iRYru" target="_blank" class="buy-btn">
                      Buy
                      </a>
                 </div>
@@ -50,7 +50,7 @@
                     <h3>🚀 Discord Nitro</h3>
                     <p>Discord Nitro 3 months code </p>
                     <p class="price">3.99 euro/</p>
-                     <a href="linka na stripe posle" target="_blank" class="buy-btn">
+                     <a href="https://youtu.be/dQw4w9WgXcQ?si=AD73Xztl3A_iRYru" target="_blank" class="buy-btn">
                      Buy
                      </a>
                 </div>
