--- a/shop.html
+++ b/shop.html
@@ -54,6 +54,9 @@
                      Buy
                      </a>
                 </div>
+   
+            </div>
+        </div>
     </div>
 
     <div id="modal-overlay" class="overlay">
