--- a/shop.html
+++ b/shop.html
@@ -46,14 +46,14 @@
                      Buy
                      </a>
                 </div>
-                <div class="product-card">
-                    <h3>🚀 Discord Nitro</h3>
-                    <p>Discord Nitro 3 months code </p>
-                    <p class="price">3.99 euro/</p>
-                     <a href="https://youtu.be/dQw4w9WgXcQ?si=AD73Xztl3A_iRYru" target="_blank" class="buy-btn">
+               <div class="product-card">
+                 <h3>🚀 Discord Nitro</h3>
+                 <p>Discord Nitro 3 months code</p>
+                 <p class="price">3.99 euro</p>
+                 <a href="https://youtu.be/dQw4w9WgXcQ?si=AD73Xztl3A_iRYru" target="_blank" class="buy-btn">
                      Buy
-                     </a>
-                </div>
+                 </a>
+               </div>
    
             </div>
         </div>
